# onefig

./: .gitignore  LICENSE  README.md  examples.ipynb  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_basic.py  01_cli_overrides.py  02_basic.py  02_cli_overrides.py  03_completion.py  03_help.py  04_freeze_and_snapshot.py  04_help.py  05_argparse.py  06_completion.py  06_env_overrides.py  07_env_overrides.py  07_freeze_and_snapshot.py  07_json_schema.py  08_diff.py  08_extends.py  09_diff.py  09_extends.py  README.md
examples/configs/: base.yaml  small_fast.yaml  train.yaml
src/onefig/: __init__.py  _cli.py  _cli_entry.py  _completion.py  _diff.py  _env.py  _errors.py  _format.py  _git.py  _help.py  _loader.py  _overrides.py  _schema.py  _union.py  model.py
src/onefig/integrations/: README.md  __init__.py  wandb.py
tests/: test_cli.py  test_cli_entry.py  test_completion.py  test_diff.py  test_env.py  test_errors.py  test_format.py  test_help.py  test_loader.py  test_model.py  test_overrides.py  test_schema.py  test_union.py  test_wandb_sweep.py
