[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onefig"
version = "0.1.0"
description = "A simple, typed YAML config system built on OmegaConf and Pydantic."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Ben Viggiano", email = "viggiano@stanford.edu" }]
keywords = ["config", "configuration", "yaml", "pydantic", "omegaconf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "omegaconf>=2.3",
    "pydantic>=2.7",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/bviggiano/onefig"
Repository = "https://github.com/bviggiano/onefig"
Issues = "https://github.com/bviggiano/onefig/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/onefig"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.9"
